# user_guide

./: .buildinfo  .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHORS.md  CITATION  CITATION.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE.html  LICENSE.md  LICENSE.rst  Makefile  README.md  _config.yml  aio.md  browserconfig.xml  commands.mk  conf.py  episodes.html  extras.html  extras.md  extras.md.html  faq.html  genindex.html  index.html  index.md  manifest.json  objects.inv  pyproject.toml  reference.md  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  (+2 more)
01-introduction/: index.html  index.md
02-1st-example/: index.html  index.md
03-input/: index.html  index.md
04-output/: index.html  index.md
05-stdout/: index.html  index.md
06-params/: index.html  index.md
07-containers/: index.html  index.md  index.md.html
08-arguments/: index.html  index.md
09-array-inputs/: index.html  index.md
10-array-outputs/: index.html  index.md
11-records/: index.html  index.md
12-env/: index.html  index.md
13-expressions/: index.html  index.md
14-runtime/: index.html  index.md
15-staging/: index.html  index.md
16-file-formats/: index.html  index.md
17-metadata/: index.html  index.md
19-custom-types/: index.html  index.md
20-software-requirements/: index.html  index.md
21-1st-workflow/: index.html  index.md  index.md.html
22-nested-workflows/: index.html  index.md
23-scatter-workflow/: index.html  index.md  index.md.html
24_conditional-workflow/: index.html  index.md
_episodes/: 01-introduction.md  02-1st-example.md  03-input.md  04-output.md  05-stdout.md  06-params.md  07-containers.md  08-arguments.md  09-array-inputs.md  10-array-outputs.md  11-records.md  12-env.md  13-expressions.md  14-runtime.md  15-staging.md  16-1st-workflow.md  16-file-formats.md  16-metadata.md  17-metadata.md  17-nested-workflows.md  18-custom-types.md  18-software-requirements.md  19-custom-types.md  19-software-requirements.md  20-software-requirements.md  21-1st-workflow.md  21-nested-workflows.md  22-nested-workflows.md  23-scatter-workflow.md  24_conditional-workflow.md  recommended-practices.md
_extras/: miscellaneous.md  recommended-practices.md  yaml.md
_includes/: aio-script.md  all_keypoints.html  carpentries.html  episode_break.html  episode_keypoints.html  episode_navbar.html  episode_overview.html  favicons.html  gh_variables.html  javascript.html  lesson_footer.html  life_cycle.html  links.md  main_title.html  manual_episode_order.html  navbar.html  syllabus.html  what-is-cwl.html  workshop_ad.html  workshop_footer.html
_layouts/: base.html  workshop.html
_sources/: LICENSE.md.txt  episodes.md.txt  extras.md.txt  index.md.txt  setup.md.txt
_templates/: layout.html  sidebar-nav-bs.html
en/: .buildinfo  LICENSE.html  episodes.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.html  tutorials.html
es/: .buildinfo  LICENSE.html  episodes.html  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.html  tutorials.html
introduction/: basic-concepts.html  index.html  prerequisites.html  quick-start.html
ja/: .buildinfo  LICENSE.html  episodes.html  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.html  tutorials.html
locales/: LICENSE.pot  _includes.pot  episodes.pot  faq.pot  index.pot  introduction.pot  setup.pot  sphinx.pot  topics.pot  tutorials.pot  user_guide.pot
misc/: index.html  index.md.html
(+593 files in other folders)
