[metadata]
name=cwl-user-guide
version=attr: cwl.doc.__version__
url=https://www.commonwl.org/user_guide/
description=CWL User Guide
long_description=file: README.md
long_description_content_type=text/markdown
project_urls=
  Documentation=https://www.commonwl.org/user_guide/
  Source=https://github.com/common-workflow-language/user_guide
  Tracker=https://github.com/common-workflow-language/user_guide/issues
license=GPL
platforms=any
classifiers=
  Environment :: Console
  Environment :: Web Environment
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: Implementation :: CPython

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.6
install_requires =
  cwltool
  cwlref-runner
  cwl-utils==0.*
  myst-parser==0.*
  pydata-sphinx-theme==0.*
  sphinx==5.*
  sphinx-reredirects==0.1.*
  sphinxcontrib-runcmd==0.2.*
  python-Levenshtein
  sphinx-intl

[options.packages.find]
include = cwl*

[options.extras_require]
test =
  cwltest==2.*
  cwltool==3.1.*
watch =
  sphinx-autobuild==2021.3.*
rtd =
  udocker
all =
  %(test)s
  %(watch)s
  %(rtd)s
